--- a/Courseworks/res/layout/activity_login.xml
+++ b/Courseworks/res/layout/activity_login.xml
@@ -2,8 +2,27 @@
     xmlns:tools="http://schemas.android.com/tools"
     tools:context=".Login" >
 
+    <!-- Login webView -->
+
+    <LinearLayout
+        android:layout_width="320dp"
+        android:layout_height="400dp"
+        android:layout_gravity="center"
+        android:minHeight="400dp"
+        android:minWidth="320dp"
+        android:orientation="vertical" >
+
+        <WebView
+            android:id="@+id/web_login"
+            android:layout_width="320dp"
+            android:layout_height="400dp" >
+        </WebView>
+    </LinearLayout>
+
     <!-- Login progress -->
 
+
+    <!--
     <LinearLayout
         android:id="@+id/login_status"
         android:layout_width="wrap_content"
@@ -28,9 +47,13 @@
             android:text="@string/login_progress_signing_in"
             android:textAppearance="?android:attr/textAppearanceMedium" />
     </LinearLayout>
+    -->
+
 
     <!-- Login form -->
 
+
+    <!--
     <ScrollView
         android:id="@+id/login_form"
         android:layout_width="match_parent"
@@ -88,5 +111,6 @@
                 android:textColor="@color/silver" />
         </LinearLayout>
     </ScrollView>
+    -->
 
 </merge>
