--- a/Courseworks/res/layout/activity_calendar_view.xml
+++ b/Courseworks/res/layout/activity_calendar_view.xml
@@ -3,5 +3,5 @@
     android:id="@+id/container"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.aisaacroth.courseworks.CalendarView"
+    tools:context="com.aisaacroth.courseworks.views.CalendarView"
     tools:ignore="MergeRootFrame" />
