--- a/Courseworks/res/layout/fragment_calendar_view.xml
+++ b/Courseworks/res/layout/fragment_calendar_view.xml
@@ -6,7 +6,7 @@
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
-    tools:context="com.aisaacroth.courseworks.CalendarVIew$PlaceholderFragment" >
+    tools:context="com.aisaacroth.courseworks.views.CalendarVIew$PlaceholderFragment" >
 
     <TextView
         android:layout_width="wrap_content"
