--- a/Courseworks/res/layout/activity_main.xml
+++ b/Courseworks/res/layout/activity_main.xml
@@ -23,13 +23,13 @@
         android:layout_toRightOf="@+id/textView1"
         android:text="@string/welcome" />
 
-    <ExpandableListView
-        android:id="@+id/expandableListView1"
+    <ListView
+        android:id="@+id/listView"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_alignParentLeft="true"
         android:layout_below="@+id/textView2" >
 
-    </ExpandableListView>
+    </ListView>
 
 </RelativeLayout>
