--- a/Courseworks/res/layout/activity_main.xml
+++ b/Courseworks/res/layout/activity_main.xml
@@ -10,26 +10,63 @@
 
     <TextView
         android:id="@+id/textView1"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content" />
-
-    <TextView
-        android:id="@+id/textView2"
-        android:gravity="center"
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
-        android:layout_alignBaseline="@+id/textView1"
-        android:layout_alignBottom="@+id/textView1"
-        android:layout_toRightOf="@+id/textView1"
+        android:gravity="center"
         android:text="@string/welcome" />
 
-    <ListView
-        android:id="@+id/listView"
-        android:layout_width="match_parent"
+    <LinearLayout
+        android:id="@+id/linearList"
+        android:layout_width="fill_parent"
         android:layout_height="wrap_content"
-        android:layout_alignParentLeft="true"
-        android:layout_below="@+id/textView2" >
+        android:layout_marginTop="50dp"
+        android:orientation="vertical"
+        tools:context=".ListActivity" >
 
-    </ListView>
+        <ListView
+            android:id="@+id/listView"
+            android:layout_width="match_parent"
+            android:layout_height="326dp" >
+        </ListView>
+
+    </LinearLayout>
+
+    <RelativeLayout
+        android:id="@+id/relativeButtons"
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/linearList"
+        android:orientation="horizontal"
+        tools:context=".ListActivity" >
+
+        <Button
+            android:id="@+id/currentCourses"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/currentCourses" />
+
+        <Button
+            android:id="@+id/announcements"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_toRightOf="@+id/currentCourses"
+            android:text="@string/announcements" />
+
+        <Button
+            android:id="@+id/calendar"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_toRightOf="@+id/announcements"
+            android:text="@string/calendar" />
+
+        <Button
+            android:id="@+id/settings"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentTop="true"
+            android:layout_toRightOf="@+id/calendar"
+            android:text="@string/settings" />
+
+    </RelativeLayout>
 
 </RelativeLayout>
