--- a/Courseworks/res/values/strings_activity_main.xml
+++ b/Courseworks/res/values/strings_activity_main.xml
@@ -3,9 +3,11 @@
     
     <!-- Strings related to the Homepage -->
     <string name="welcome">Welcome to Courseworks Mobile</string>
-    <string name="currentCourses">CC</string>
+    <string name="courses">Course</string>
     <string name="announcements">Flag</string>
     <string name="calendar">Cal</string>
     <string name="settings">Settings</string>
+    <string name="open_link">Open</string>
+    <string name="delete_link">Delete</string>
     
 </resources>
