--- a/Courseworks/res/layout/fragment_calendar_view.xml
+++ b/Courseworks/res/layout/fragment_calendar_view.xml
@@ -6,11 +6,15 @@
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
+    android:orientation="vertical"
     tools:context="com.aisaacroth.courseworks.CalendarView$PlaceholderFragment" >
 
     <TextView
-        android:layout_width="wrap_content"
+        android:layout_width="fill_parent"
         android:layout_height="wrap_content"
-        android:text="@string/hello_world" />
+        android:gravity="center"
+        android:text="Calendar"
+        android:textSize="20dp"
+        android:layout_centerInParent="true" />
 
 </RelativeLayout>
