--- a/Courseworks/res/values/strings_activity_login.xml
+++ b/Courseworks/res/values/strings_activity_login.xml
@@ -8,9 +8,8 @@
     <string name="action_log_in">Log on</string>
     <string name="action_forgot_password">Recover lost password</string>
     <string name="login_progress_signing_in">Logging on&#8230;</string>
-    <string name="error_invalid_uni">This UNI is invalid</string>
     <string name="error_invalid_password">This password is too short</string>
-    <string name="error_incorrect_password">This password is incorrect</string>
+    <string name="error_incorrect_login">Login incorrect.</string>
     <string name="error_field_required">This field is required</string>
 
 </resources>
