--- a/Courseworks/res/layout/activity_login.xml
+++ b/Courseworks/res/layout/activity_login.xml
@@ -53,7 +53,7 @@
 
             <EditText
                 android:id="@+id/password"
-                android:layout_width="match_parent"
+                android:layout_width="306dp"
                 android:layout_height="wrap_content"
                 android:hint="@string/prompt_password"
                 android:imeActionId="@+id/login"
@@ -66,24 +66,24 @@
                 android:textColorHint="@color/white"
                 android:textCursorDrawable="@null" />
 
-            <CheckBox
-                android:id="@+id/remember_me"
-                android:layout_width="fill_parent"
-                android:layout_height="wrap_content"
-                android:text="@string/remember_me"
-                android:textColor="@color/white" />
-
             <Button
                 android:id="@+id/sign_in_button"
-                android:layout_width="wrap_content"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_gravity="right"
                 android:layout_marginTop="16dp"
                 android:background="@color/white"
                 android:paddingLeft="32dp"
                 android:paddingRight="32dp"
                 android:text="@string/action_log_in"
                 android:textColor="@color/silver" />
+
+            <CheckBox
+                android:id="@+id/remember_me"
+                android:layout_width="153dp"
+                android:layout_height="wrap_content"
+                android:text="@string/remember_me"
+                android:textColor="@color/white" />
+
         </LinearLayout>
     </ScrollView>
 
