--- a/Courseworks/res/layout/activity_login.xml
+++ b/Courseworks/res/layout/activity_login.xml
@@ -1,8 +1,11 @@
 <merge xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
+    android:layout_width="wrap_content"
+    android:layout_height="wrap_content"
     tools:context=".Login" >
 
     <!-- Login progress -->
+
     <LinearLayout
         android:id="@+id/login_status"
         android:layout_width="wrap_content"
@@ -29,62 +32,100 @@
     </LinearLayout>
 
     <!-- Login form -->
-    <ScrollView
+
+    <LinearLayout
         android:id="@+id/login_form"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:background="@color/columbia_blue" >
+        android:background="@color/black_haze"
+        android:orientation="vertical" >
+
+        <ImageView
+            android:id="@+id/logo"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:contentDescription="@string/logo_description"
+            android:paddingBottom="16dp"
+            android:src="@drawable/courseworks_login" />
 
         <LinearLayout
             style="@style/LoginFormContainer"
-            android:orientation="vertical" >
+            android:layout_height="wrap_content"
+            android:orientation="vertical"
+            android:padding="0dp"
+            android:paddingTop="16dp" >
 
             <EditText
                 android:id="@+id/uni"
-                android:layout_width="match_parent"
+                android:layout_width="fill_parent"
                 android:layout_height="wrap_content"
+                android:background="@drawable/solid_textfield"
+                android:ems="10"
                 android:hint="@string/prompt_uni"
                 android:inputType="text"
                 android:maxLines="1"
+                android:padding="8dp"
                 android:singleLine="true"
-                android:textColor="@color/white"
-                android:textColorHint="@color/white"
+                android:textColor="@color/delta"
+                android:textColorHint="@color/delta"
                 android:textCursorDrawable="@null" />
 
             <EditText
                 android:id="@+id/password"
-                android:layout_width="306dp"
-                android:layout_height="wrap_content"
+                android:layout_width="match_parent"
+                android:layout_height="43dp"
+                android:background="@drawable/solid_textfield"
                 android:hint="@string/prompt_password"
                 android:imeActionId="@+id/login"
-                android:imeActionLabel="@string/action_log_in"
-                android:imeOptions="actionUnspecified"
+                android:imeActionLabel="@string/action_sign_in"
                 android:inputType="textPassword"
                 android:maxLines="1"
+                android:padding="8dp"
                 android:singleLine="true"
-                android:textColor="@color/white"
-                android:textColorHint="@color/white"
+                android:textColor="@color/delta"
+                android:textColorHint="@color/delta"
                 android:textCursorDrawable="@null" />
+        </LinearLayout>
+
+        <RelativeLayout
+            style="@style/LoginFormContainer"
+            android:layout_width="match_parent"
+            android:layout_height="0dip"
+            android:layout_weight="0.25"
+            android:orientation="vertical" >
 
             <Button
                 android:id="@+id/sign_in_button"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
+                android:layout_height="40dp"
                 android:layout_marginTop="16dp"
-                android:background="@color/white"
+                android:background="@drawable/rounded_button"
                 android:paddingLeft="32dp"
                 android:paddingRight="32dp"
-                android:text="@string/action_log_in"
-                android:textColor="@color/silver" />
+                android:text="@string/action_sign_in"
+                android:textColor="@color/white" />
+
+            <TextView
+                android:id="@+id/forgot_password"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_alignBaseline="@+id/remember_me"
+                android:layout_alignBottom="@+id/remember_me"
+                android:layout_alignRight="@+id/sign_in_button"
+                android:text="@string/forgot_password"
+                android:textColor="@color/denim" />
 
             <CheckBox
                 android:id="@+id/remember_me"
-                android:layout_width="153dp"
+                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:layout_alignLeft="@+id/sign_in_button"
+                android:layout_below="@+id/sign_in_button"
+                android:layout_marginTop="10dp"
                 android:text="@string/remember_me"
-                android:textColor="@color/white" />
-
-        </LinearLayout>
-    </ScrollView>
+                android:textColor="@color/denim"
+                android:textSize="14sp" />
+        </RelativeLayout>
+    </LinearLayout>
 
 </merge>
