--- a/Courseworks/res/values/strings_activity_login.xml
+++ b/Courseworks/res/values/strings_activity_login.xml
@@ -1,15 +1,16 @@
 <resources>
 
-    <string name="title_activity_login">Log on</string>
+    <string name="title_activity_login">Sign In</string>
 
     <!-- Strings related to login -->
     <string name="prompt_uni">UNI</string>
     <string name="prompt_password">Password</string>
-    <string name="action_log_in">Log on</string>
     <string name="action_forgot_password">Recover lost password</string>
-    <string name="login_progress_signing_in">Logging on&#8230;</string>
-    <string name="error_invalid_password">This password is too short</string>
-    <string name="error_incorrect_login">Login incorrect.</string>
+    <string name="action_sign_in">Sign In</string>
+    <string name="forgot_password">Forgot Password</string>
+    <string name="login_progress_signing_in">Signing in&#8230;</string>
     <string name="error_field_required">This field is required</string>
+    <string name="error_invalid_password">This password is too short</string>
+    <string name="error_incorrect_signin">Sign In incorrect.</string>
 
 </resources>
