--- a/Courseworks/res/drawable/rounded_button.xml
+++ b/Courseworks/res/drawable/rounded_button.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android" >
 
-    <solid android:color="@color/light_blue" />
+    <solid android:color="@color/sign_in_blue" />
 
     <corners
         android:bottomLeftRadius="5dp"
