--- a/Courseworks/res/drawable/solid_textfield.xml
+++ b/Courseworks/res/drawable/solid_textfield.xml
@@ -8,7 +8,7 @@
         <shape android:shape="rectangle" >
             <stroke
                 android:width="1dp"
-                android:color="@color/text_gray" />
+                android:color="@color/dark_gray" />
 
             <solid android:color="@color/white" />
                   <padding android:left="10dp"
