--- a/Courseworks/res/layout/activity_login.xml
+++ b/Courseworks/res/layout/activity_login.xml
@@ -37,7 +37,7 @@
         android:id="@+id/login_form"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:background="@color/text_gray"
+        android:background="@color/light_gray"
         android:orientation="vertical" >
 
         <ImageView
@@ -66,8 +66,8 @@
                 android:maxLines="1"
                 android:padding="8dp"
                 android:singleLine="true"
-                android:textColor="@color/text_gray"
-                android:textColorHint="@color/text_gray"
+                android:textColor="@color/dark_gray"
+                android:textColorHint="@color/dark_gray"
                 android:textCursorDrawable="@null"
                 android:textSize="14sp" />
 
@@ -83,8 +83,8 @@
                 android:maxLines="1"
                 android:padding="8dp"
                 android:singleLine="true"
-                android:textColor="@color/text_gray"
-                android:textColorHint="@color/text_gray"
+                android:textColor="@color/dark_gray"
+                android:textColorHint="@color/dark_gray"
                 android:textCursorDrawable="@null"
                 android:textSize="14sp" />
         </LinearLayout>
