OPEN - task 20: Create Announcement Activity https://github.com/aisaacroth/CourseWorksAndroid/issues/issue/20

--- a/Courseworks/res/layout/fragment_announcement_view.xml
+++ b/Courseworks/res/layout/fragment_announcement_view.xml
@@ -7,4 +7,16 @@
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
     tools:context="com.aisaacroth.courseworks.AnnouncementView$PlaceholderFragment" >
+    
+    <ListView 
+        android:id="@id/android:list"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:drawSelectorOnTop="false"></ListView>
+    
+    <TextView 
+        android:id="@id/android:empty"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:text="@string/no_announcements"/>
 </RelativeLayout>
