--- a/Courseworks/res/layout/fragment_announcement_view.xml
+++ b/Courseworks/res/layout/fragment_announcement_view.xml
@@ -1,5 +1,6 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/announcements"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:paddingBottom="@dimen/activity_vertical_margin"
@@ -7,16 +8,22 @@
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
     tools:context="com.aisaacroth.courseworks.AnnouncementView$PlaceholderFragment" >
-    
-    <ListView 
+
+    <ListView
         android:id="@id/android:list"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:drawSelectorOnTop="false"></ListView>
+        android:layout_height="match_parent" >
+    </ListView>
     
-    <TextView 
-        android:id="@id/android:empty"
+    <TextView
+        android:id="@+id/announcement_item"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent" />
+
+    <TextView
+        android:id="@android:id/empty"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:text="@string/no_announcements"/>
+        android:text="@string/no_announcements" />
+
 </RelativeLayout>
