--- a/Courseworks/res/layout/announcement_list_item.xml
+++ b/Courseworks/res/layout/announcement_list_item.xml
@@ -1,17 +1,20 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:id="@+id/list_item_child"
+    android:id="@+id/list_item"
     android:layout_width="fill_parent"
     android:layout_height="fill_parent"
-    android:gravity="center_vertical"
     android:orientation="vertical" >
 
     <TextView
-        android:id="@+id/list_item_text_child"
+        android:id="@+id/item_title"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginLeft="5dp"
-        android:padding="10dp"
-        android:textSize="20sp" />
+        android:textSize="14sp" />
+    
+    <TextView 
+        android:id="@+id/item_class"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textSize="12sp"/>
 
 </LinearLayout>
