--- a/Courseworks/res/menu/main.xml
+++ b/Courseworks/res/menu/main.xml
@@ -1,10 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <menu xmlns:android="http://schemas.android.com/apk/res/android" >
-
-    <item
-        android:id="@+id/action_settings"
-        android:orderInCategory="100"
-        android:showAsAction="never"
-        android:title="@string/action_settings"/>
-
+    
+    <item android:id="@+id/main_header"
+        android:icon="@drawable/courseworks_logo_login"
+        android:title="@string/app_name" />
+    
 </menu>
