OPEN - task 24: Implement Katy's Designs for AnnouncementListView https://github.com/aisaacroth/CourseWorksAndroid/issues/issue/24 The ActionBar tabs now have different selectable colors. On to the text.

--- a/Courseworks/res/layout/activity_login_view.xml
+++ b/Courseworks/res/layout/activity_login_view.xml
@@ -116,7 +116,7 @@
                 android:layout_alignBottom="@+id/remember_me"
                 android:layout_alignRight="@+id/sign_in_button"
                 android:text="@string/forgot_password"
-                android:textColor="@color/text_blue"
+                android:textColor="@color/dark_blue"
                 android:textSize="14sp" />
 
             <CheckBox
@@ -127,7 +127,7 @@
                 android:layout_below="@+id/sign_in_button"
                 android:layout_marginTop="10dp"
                 android:text="@string/remember_me"
-                android:textColor="@color/text_blue"
+                android:textColor="@color/dark_blue"
                 android:textSize="14sp" />
         </RelativeLayout>
     </LinearLayout>
