--- a/Courseworks/res/values/styles.xml
+++ b/Courseworks/res/values/styles.xml
@@ -1,11 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
-<resources>
+<resources xmlns:android="http://schemas.android.com/apk/res/android">
 
     <!--
         Base application theme, dependent on API level. This theme is replaced
         by AppBaseTheme from res/values-vXX/styles.xml on newer devices.
     -->
-    <style name="AppBaseTheme" parent="android:Theme.Light">
+    <style name="AppBaseTheme" parent="@android:style/Theme.Holo.Light">
         <!--
             Theme customizations available in newer API levels can go in
             res/values-vXX/styles.xml, while customizations related to
@@ -16,6 +16,26 @@
     <!-- Application theme. -->
     <style name="AppTheme" parent="AppBaseTheme">
         <!-- All customizations that are NOT specific to a particular API-level can go here. -->
+    </style>
+
+    <style name="ActionBarMain" parent="@android:style/Theme.Holo.Light">
+        <item name="android:actionBarStyle">@style/ActionBarWhite</item>
+        <item name="android:actionBarTabStyle">@style/TabsLightBlue</item>
+        <item name="android:actionBarTabTextStyle">@style/TabTextWhite</item>
+    </style>
+
+    <style name="ActionBarWhite" parent="@android:style/Widget.Holo.ActionBar">
+        <item name="android:background">@color/white</item>
+        <item name="android:icon">@drawable/courseworks_logo_login</item>
+        <item name="android:displayOptions">showHome</item>
+    </style>
+
+    <style name="TabsLightBlue" parent="@android:style/Widget.Holo.ActionBar.TabView">
+        <item name="android:background">@drawable/tab_selected</item>
+    </style>
+    
+    <style name="TabTextWhite" parent="@android:style/Widget.Holo.ActionBar.TabText">
+        <item name="android:textColor">@color/white</item>
     </style>
 
     <style name="LoginFormContainer">
