--- a/Courseworks/res/layout/announcement_list_item.xml
+++ b/Courseworks/res/layout/announcement_list_item.xml
@@ -9,12 +9,28 @@
         android:id="@+id/item_title"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:textColor="@color/announcement_blue"
         android:textSize="14sp" />
-    
-    <TextView 
-        android:id="@+id/item_class"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:textSize="12sp"/>
+
+    <LinearLayout
+        android:id="@+id/item_subtext"
+        android:layout_width="fill_parent"
+        android:layout_height="fill_parent"
+        android:orientation="horizontal" >
+
+        <TextView
+            android:id="@+id/item_class"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textColor="@color/dark_gray"
+            android:textSize="12sp" />
+
+        <TextView
+            android:id="@+id/item_date"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textColor="@color/black"
+            android:textSize="12sp" />
+    </LinearLayout>
 
 </LinearLayout>
