23: Implement Katy's Designs for Announcement Activity
Task-Url:
https://github.com/aisaacroth/CourseWorksAndroid/issues/issue/23 Have a
framework up. Not going to clean it up till Katy sends over the new
drafts.

--- a/Courseworks/res/layout/activity_announcement_view.xml
+++ b/Courseworks/res/layout/activity_announcement_view.xml
@@ -25,17 +25,27 @@
             android:id="@+id/announcement_title"
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"
-            android:text="Project Name"
             android:textColor="@color/light_blue"
             android:textSize="16sp" />
-        
+
         <TextView
             android:id="@+id/announcement_class"
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"
-            android:text="Classs Name"
             android:textColor="@color/black"
-            android:textSize="14sp"/>
+            android:textSize="14sp" />
+
+        <TextView
+            android:id="@+id/announcement_body"
+            android:layout_width="fill_parent"
+            android:layout_height="wrap_content"
+            android:textColor="@color/black"
+            android:textSize="12sp" />
+
+        <TextView
+            android:id="@+id/posted_date"
+            android:layout_width="fill_parent"
+            android:layout_height="wrap_content" />
     </LinearLayout>
 
 </LinearLayout>
