--- a/Courseworks/res/layout/activity_announcement_view.xml
+++ b/Courseworks/res/layout/activity_announcement_view.xml
@@ -15,37 +15,43 @@
         android:paddingBottom="16dp"
         android:src="@drawable/courseworks_logo_login" />
 
-    <LinearLayout
-        android:id="@+id/announcement_container"
-        android:layout_width="fill_parent"
-        android:layout_height="wrap_content"
-        android:orientation="vertical" >
+    <ScrollView
+        android:id="@+id/announcement_scroll"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
 
-        <TextView
-            android:id="@+id/announcement_title"
+        <LinearLayout
+            android:id="@+id/announcement_container"
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"
-            android:textColor="@color/light_blue"
-            android:textSize="16sp" />
+            android:orientation="vertical" >
 
-        <TextView
-            android:id="@+id/announcement_class"
-            android:layout_width="fill_parent"
-            android:layout_height="wrap_content"
-            android:textColor="@color/black"
-            android:textSize="14sp" />
+            <TextView
+                android:id="@+id/announcement_title"
+                android:layout_width="fill_parent"
+                android:layout_height="wrap_content"
+                android:textColor="@color/light_blue"
+                android:textSize="16sp" />
 
-        <TextView
-            android:id="@+id/announcement_body"
-            android:layout_width="fill_parent"
-            android:layout_height="wrap_content"
-            android:textColor="@color/black"
-            android:textSize="12sp" />
+            <TextView
+                android:id="@+id/announcement_class"
+                android:layout_width="fill_parent"
+                android:layout_height="wrap_content"
+                android:textColor="@color/black"
+                android:textSize="14sp" />
 
-        <TextView
-            android:id="@+id/posted_date"
-            android:layout_width="fill_parent"
-            android:layout_height="wrap_content" />
-    </LinearLayout>
+            <TextView
+                android:id="@+id/announcement_body"
+                android:layout_width="fill_parent"
+                android:layout_height="wrap_content"
+                android:textColor="@color/black"
+                android:textSize="12sp" />
+
+            <TextView
+                android:id="@+id/posted_date"
+                android:layout_width="fill_parent"
+                android:layout_height="wrap_content" />
+        </LinearLayout>
+    </ScrollView>
 
 </LinearLayout>
