--- a/Courseworks/res/layout/activity_announcement_view.xml
+++ b/Courseworks/res/layout/activity_announcement_view.xml
@@ -13,12 +13,13 @@
         android:layout_height="wrap_content"
         android:contentDescription="@string/logo_description"
         android:paddingBottom="16dp"
-        android:src="@drawable/courseworks_logo_login" />
+        android:src="@drawable/courseworks_logo_login"
+        android:background="@drawable/solid_bottom_line" />
 
     <ScrollView
         android:id="@+id/announcement_scroll"
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="match_parent" >
 
         <LinearLayout
             android:id="@+id/announcement_container"
@@ -26,32 +27,67 @@
             android:layout_height="wrap_content"
             android:orientation="vertical" >
 
-
             <TextView
-                android:id="@+id/announcement_class"
+                android:id="@+id/announcement_title"
                 android:layout_width="fill_parent"
                 android:layout_height="wrap_content"
                 android:textColor="@color/light_blue"
                 android:textSize="16sp" />
 
-            <TextView
-                android:id="@+id/announcement_title"
+            <LinearLayout
                 android:layout_width="fill_parent"
                 android:layout_height="wrap_content"
-                android:textColor="@color/black"
-                android:textSize="14sp" />
+                android:orientation="horizontal" >
+
+                <TextView
+                    android:id="@+id/announcement_class_box"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginLeft="12dp"
+                    android:layout_marginRight="12dp"
+                    android:background="@drawable/blue_rectangle"
+                    android:text="@string/class_tag"
+                    android:textColor="@color/white"
+                    android:textSize="10sp" />
+
+                <TextView
+                    android:id="@+id/announcement_class"
+                    android:layout_width="fill_parent"
+                    android:layout_height="wrap_content"
+                    android:textColor="@color/black"
+                    android:textSize="14sp" />
+            </LinearLayout>
 
             <TextView
                 android:id="@+id/announcement_body"
                 android:layout_width="fill_parent"
                 android:layout_height="wrap_content"
+                android:background="@drawable/solid_bottom_line"
                 android:textColor="@color/black"
                 android:textSize="12sp" />
 
-            <TextView
-                android:id="@+id/posted_date"
+            <LinearLayout
                 android:layout_width="fill_parent"
-                android:layout_height="wrap_content" />
+                android:layout_height="wrap_content"
+                android:background="@drawable/solid_bottom_line"
+                android:orientation="horizontal" >
+
+                <TextView
+                    android:id="@+id/announcement_posted_box"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginRight="@dimen/activity_horizontal_margin"
+                    android:background="@drawable/blue_rectangle"
+                    android:text="@string/posted_date"
+                    android:textColor="@color/white"
+                    android:textSize="10sp" />
+
+                <TextView
+                    android:id="@+id/announcement_posted_date"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:textColor="@color/black" />
+            </LinearLayout>
         </LinearLayout>
     </ScrollView>
 
