--- a/Courseworks/res/values/styles.xml
+++ b/Courseworks/res/values/styles.xml
@@ -43,5 +43,17 @@
         <item name="android:layout_height">wrap_content</item>
         <item name="android:padding">16dp</item>
     </style>
+    
+    <style name="AnnouncementViewBar" parent="@android:style/Theme.Holo.Light">
+        <item name="android:text">@string/announcement_view</item>
+        <item name="android:textColor">@color/black</item>
+        <item name="android:textSize">12sp</item>
+        <item name="android:actionBarStyle">@style/AnnouncementBarStyle</item>
+    </style>
+    
+    <style name="AnnouncementBarStyle" parent="@android:style/Widget.Holo.ActionBar">
+        <item name="android:background">@drawable/solid_bottom_line</item>
+        <item name="android:icon">@android:color/transparent</item>
+    </style>
 
 </resources>
