23: Implement Katy's Designs for Announcement Activity
Task-Url:
https://github.com/aisaacroth/CourseWorksAndroid/issues/issue/23 Design
frustrations... Almost there.

--- a/Courseworks/res/layout/activity_announcement_view.xml
+++ b/Courseworks/res/layout/activity_announcement_view.xml
@@ -11,10 +11,11 @@
         android:id="@+id/logo"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:adjustViewBounds="true"
+        android:background="@drawable/solid_bottom_line"
         android:contentDescription="@string/logo_description"
         android:paddingBottom="16dp"
-        android:src="@drawable/courseworks_logo_login"
-        android:background="@drawable/solid_bottom_line" />
+        android:src="@drawable/courseworks_screenshot" />
 
     <ScrollView
         android:id="@+id/announcement_scroll"
