23: Implement Katy's Designs for Announcement Activity
Task-Url:
https://github.com/aisaacroth/CourseWorksAndroid/issues/issue/23 More
design stuff that is impossible to implement.

--- a/Courseworks/res/layout/activity_announcement_view.xml
+++ b/Courseworks/res/layout/activity_announcement_view.xml
@@ -7,32 +7,47 @@
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin" >
 
-    <ImageView
-        android:id="@+id/logo"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:adjustViewBounds="true"
-        android:background="@drawable/solid_bottom_line"
-        android:contentDescription="@string/logo_description"
-        android:paddingBottom="16dp"
-        android:src="@drawable/courseworks_screenshot" />
-
     <ScrollView
         android:id="@+id/announcement_scroll"
         android:layout_width="match_parent"
-        android:layout_height="match_parent" >
+        android:layout_height="wrap_content" >
 
         <LinearLayout
             android:id="@+id/announcement_container"
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"
             android:orientation="vertical" >
+            
+            <RelativeLayout
+                android:id="@+id/announcement_datetime"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:orientation="horizontal"
+                android:background="@drawable/solid_bottom_line">
+                
+                <TextView 
+                    android:id="@+id/announcement_current_date"
+                    android:layout_width="fill_parent"
+                    android:layout_height="wrap_content"
+                    android:textColor="@color/black"
+                    android:gravity="left"
+                    android:textSize="10sp" />
+                
+                <TextView 
+                    android:id="@+id/announcement_update_time"
+                    android:layout_width ="fill_parent"
+                    android:layout_height="wrap_content"
+                    android:textColor="@color/black"
+                    android:gravity="right"
+                    android:textSize="10sp" />
+            </RelativeLayout>
 
             <TextView
                 android:id="@+id/announcement_title"
                 android:layout_width="fill_parent"
                 android:layout_height="wrap_content"
                 android:textColor="@color/light_blue"
+                android:layout_marginLeft="4dp"
                 android:textSize="16sp" />
 
             <LinearLayout
@@ -44,8 +59,8 @@
                     android:id="@+id/announcement_class_box"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_marginLeft="12dp"
                     android:layout_marginRight="12dp"
+                    android:layout_marginLeft="4dp"
                     android:background="@drawable/blue_rectangle"
                     android:text="@string/class_tag"
                     android:textColor="@color/white"
