--- a/Courseworks/res/layout/activity_login_view.xml
+++ b/Courseworks/res/layout/activity_login_view.xml
@@ -42,11 +42,12 @@
 
         <ImageView
             android:id="@+id/logo"
+            android:layout_marginTop="8dp"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:contentDescription="@string/logo_description"
             android:paddingBottom="16dp"
-            android:src="@drawable/courseworks_logo_login" />
+            android:src="@drawable/test_logo" />
 
         <LinearLayout
             style="@style/LoginFormContainer"
@@ -59,7 +60,7 @@
                 android:id="@+id/uni"
                 android:layout_width="fill_parent"
                 android:layout_height="wrap_content"
-                android:background="@drawable/solid_bottom_line"
+                android:background="@drawable/login_textfield"
                 android:ems="10"
                 android:hint="@string/prompt_uni"
                 android:inputType="text"
@@ -75,7 +76,7 @@
                 android:id="@+id/password"
                 android:layout_width="match_parent"
                 android:layout_height="43dp"
-                android:background="@drawable/solid_bottom_line"
+                android:background="@drawable/login_textfield"
                 android:hint="@string/prompt_password"
                 android:imeActionId="@+id/login"
                 android:imeActionLabel="@string/action_sign_in"
