--- a/Courseworks/res/layout/announcement_view_actionbar.xml
+++ b/Courseworks/res/layout/announcement_view_actionbar.xml
@@ -1,35 +1,27 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:id="@+id/announcement_actionbar"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:gravity="center"
-    android:background="@drawable/solid_bottom_line"
-    android:orientation="horizontal" >
-    
-    <ImageView 
-        android:id="@+id/announcement_back_glyph"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:src="@drawable/back_glyph"/>
-    
-    <TextView 
+    android:background="@drawable/login_textfield" >
+
+    <TextView
         android:id="@+id/announcement_actionbar_back"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:gravity="left"
+        android:layout_centerVertical="true"
         android:text="@string/back_button"
         android:textColor="@color/dark_blue"
-        android:textSize="12sp"
-        android:layout_marginRight="@dimen/activity_horizontal_margin" />
+        android:textSize="12sp" />
 
     <TextView
         android:id="@+id/announcement_actionbar_title"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:gravity="center"
+        android:layout_centerHorizontal="true"
+        android:layout_centerVertical="true"
         android:text="@string/announcement_view"
         android:textColor="@color/black"
         android:textSize="12sp" />
 
-</LinearLayout>
+</RelativeLayout>
