--- a/Courseworks/res/layout/activity_main.xml
+++ b/Courseworks/res/layout/activity_main.xml
@@ -15,4 +15,29 @@
         android:layout_height="match_parent" >
     </android.support.v4.view.ViewPager>
 
+    <RelativeLayout
+        android:id="@+id/main_datetime"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal" >
+
+        <TextView
+            android:id="@+id/main_current_date"
+            android:layout_width="fill_parent"
+            android:layout_height="wrap_content"
+            android:gravity="left"
+            android:text="Test Date"
+            android:textColor="@color/black"
+            android:textSize="10sp" />
+
+        <TextView
+            android:id="@+id/main_update_time"
+            android:layout_width="fill_parent"
+            android:layout_height="wrap_content"
+            android:gravity="right"
+            android:text="Test Time"
+            android:textColor="@color/black"
+            android:textSize="10sp" />
+    </RelativeLayout>
+
 </RelativeLayout>
