--- a/Courseworks/res/values/strings_activity_announcement_list.xml
+++ b/Courseworks/res/values/strings_activity_announcement_list.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     
-    <string name="activity_name">Announcements</string>
+    <string name="announcement_list_title">Announcements</string>
     <string name="no_announcements">No New Announcements</string>
 </resources>
