--- a/Courseworks/res/layout/activity_announcement_view.xml
+++ b/Courseworks/res/layout/activity_announcement_view.xml
@@ -8,10 +8,13 @@
     android:paddingTop="@dimen/activity_vertical_margin" >
 
     <ImageView
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:contentDescription="@string/logo_description"
+        android:scaleType="fitCenter"
         android:src="@drawable/a_final_attempt"
-        android:contentDescription="@string/logo_description" />
+        android:layout_marginTop="-20dp"
+        android:layout_marginBottom="-10dp" />
 
     <ScrollView
         android:id="@+id/announcement_scroll"
