--- a/Courseworks/res/layout/activity_hidden_web_view.xml
+++ b/Courseworks/res/layout/activity_hidden_web_view.xml
@@ -3,4 +3,5 @@
     android:id="@+id/hiddenWebView"
     android:layout_width="fill_parent"
     android:layout_height="fill_parent"
+    android:visibility="invisible"
 />
