--- a/Courseworks/res/values/styles.xml
+++ b/Courseworks/res/values/styles.xml
@@ -22,6 +22,9 @@
         <item name="android:actionBarStyle">@style/ActionBarWhite</item>
         <item name="android:actionBarTabStyle">@style/TabsLightBlue</item>
         <item name="android:actionBarTabTextStyle">@style/TabTextWhite</item>
+        <item name="android:icon">@android:color/transparent</item>
+        <item name="android:displayOptions">showCustom|showHome</item>
+        <item name="displayOptions">showCustom|showHome</item>
     </style>
 
     <style name="ActionBarWhite" parent="@android:style/Widget.Holo.ActionBar">
@@ -32,7 +35,7 @@
     <style name="TabsLightBlue" parent="@android:style/Widget.Holo.ActionBar.TabView">
         <item name="android:background">@drawable/tab_selected</item>
     </style>
-    
+
     <style name="TabTextWhite" parent="@android:style/Widget.Holo.ActionBar.TabText">
         <item name="android:textColor">@color/white</item>
     </style>
@@ -42,14 +45,14 @@
         <item name="android:layout_height">wrap_content</item>
         <item name="android:padding">16dp</item>
     </style>
-    
+
     <style name="AnnouncementViewBar" parent="@android:style/Theme.Holo.Light">
         <item name="android:text">@string/announcement_view</item>
         <item name="android:textColor">@color/black</item>
         <item name="android:textSize">12sp</item>
         <item name="android:actionBarStyle">@style/AnnouncementBarStyle</item>
     </style>
-    
+
     <style name="AnnouncementBarStyle" parent="@android:style/Widget.Holo.ActionBar">
         <item name="android:background">@drawable/login_textfield</item>
         <item name="android:icon">@android:color/transparent</item>
