--- a/Courseworks/res/values/strings_activity_announcement_list.xml
+++ b/Courseworks/res/values/strings_activity_announcement_list.xml
@@ -3,4 +3,5 @@
     
     <string name="announcement_list_title">Announcements</string>
     <string name="no_announcements">No New Announcements</string>
+    <string name="announcement_list_signout_option">Sign Out</string>
 </resources>
