--- a/Courseworks/res/layout/fragment_course_list_view.xml
+++ b/Courseworks/res/layout/fragment_course_list_view.xml
@@ -9,8 +9,10 @@
     tools:context="com.aisaacroth.courseworks.CourseView$PlaceholderFragment" >
 
     <TextView
-        android:layout_width="wrap_content"
+        android:layout_width="fill_parent"
         android:layout_height="wrap_content"
-        android:text="@string/hello_world" />
+        android:layout_centerInParent="true"
+        android:gravity="center" >
+    </TextView>
 
 </RelativeLayout>
