As per JC's request, I have renamed all the packages on the system.

--- a/Courseworks/res/layout/activity_course_view.xml
+++ b/Courseworks/res/layout/activity_course_view.xml
@@ -3,5 +3,5 @@
     android:id="@+id/container"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.aisaacroth.courseworks.views.CourseListView"
+    tools:context="edu.columbia.cuit.courseworks.views.CourseListView"
     tools:ignore="MergeRootFrame" />
