--- a/Courseworks/res/layout/fragment_announcement_list_view.xml
+++ b/Courseworks/res/layout/fragment_announcement_list_view.xml
@@ -3,8 +3,7 @@
     android:id="@+id/announcements"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:paddingTop="@dimen/activity_vertical_margin"
-    tools:context="com.aisaacroth.courseworks.AnnouncementView$PlaceholderFragment" >
+    android:paddingTop="@dimen/activity_vertical_margin" >
 
     <ListView
         android:id="@id/android:list"
