--- a/Courseworks/res/layout/fragment_calendar_view.xml
+++ b/Courseworks/res/layout/fragment_calendar_view.xml
@@ -6,8 +6,7 @@
     android:paddingBottom="@dimen/activity_vertical_margin"
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
-    android:paddingTop="@dimen/activity_vertical_margin"
-    tools:context="com.aisaacroth.courseworks.CalendarView$PlaceholderFragment" >
+    android:paddingTop="@dimen/activity_vertical_margin" >
 
     <CalendarView
         android:id="@+id/calendarView1"
